# minimal-qml

./: README.md  main.cpp  meson.build  minimal-qml.pro  qmake_debug_output.txt
